<resources>
    <string name="app_name" translatable="true">HDSS CAPTURE</string>
    <string name="versions">2026.01.11</string>
    <string name="update">update</string>
    <string name="send">send</string>
    <string name="sync">sync</string>
    <string name="census">census</string>
    <string name="locations">Compound Registration Form</string>
    <string name="visit">Visit Registration Form</string>
    <string name="interviewee">Is the person selected the one you are actually interviewing?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="respond">Name of Respondent</string>
    <string name="locationtype">Locations Type</string>
    <string name="rural">Rural</string>
    <string name="urban">Urban</string>
    <string name="see_list">See List</string>
    <string name="location_hint_lbl">Locations External Id</string>
    <string name="round_select">Select Round</string>
    <string name="housepresent">Is There Any Household Member Present?</string>
    <string name="hcard">Do you have Health card or Vaccination Document/Booklet</string>
    <string name="vareason">Reason not vaccinated for BCG, Polio, Penta, and MV</string>
    <string name="onet">How often does the baby sleep under a bednet?</string>
    <string name="lastpreg">Last Pregnancy Date</string>
    <string name="rea">Reason for Admission?</string>
    <string name="hl">How long after birth did you start Breastfeeding?</string>
    <string name="hod">How old (in days) was the baby when you started giving the baby food or drinks?</string>
    <string name="hom">How old (in months) was the baby when you started giving the baby food or drinks?</string>
    <string name="stm">How old (in months) was the baby when you stopped breastfeeding?</string>
    <string name="sty">How old (in years) was the baby when you stopped breastfeeding?</string>
    <string name="nhis">National Health Insurance Scheme</string>
    <string name="sbf">Are you still breastfeeding?</string>
    <string name="admission">Has the baby been admitted at a health facility in the last six months?</string>
    <string name="bednett">Does your household have a bednet?</string>
    <string name="slpbednet">Did the baby sleep under bednet last Night?</string>
    <string name="chlbednet">How many children sleep under the bednet?</string>
    <string name="weight">Weight of child at birth in Kg?</string>
    <string name="scar">Does the child have the BCG scar? (Observe)</string>
    <string name="fever">In the last two weeks did the child report Fever</string>
    <string name="treat">Did you seek for treatment?</string>
    <string name="diarrhoea">In the last two weeks did the child report diarrhoea?</string>
    <string name="arti">In the last two weeks did the child report acute respiratory tract infection?</string>
    <string name="muac">Mid-Upper Arm circumference (MUAC)</string>
    <string name="bcg">Bacille Calmette-Guerin Vaccine (BCG)</string>
    <string name="opv0">Oral Polio Vaccine (OPV0)</string>
    <string name="opv1">Oral Polio Vaccine (OPV1)</string>
    <string name="opv2">Oral Polio Vaccine (OPV2)</string>
    <string name="opv3">Oral Polio Vaccine (OPV3)</string>
    <string name="month">Age in Months</string>
    <string name="week">Age in Weeks</string>
    <string name="ipv">Inactivated Polio Vaccine (IPV)</string>
    <string name="mena">Meningococcal Vaccine (MenA)</string>
    <string name="itn">Insecticide treated net (ITN)</string>
    <string name="send_vaccination">Send Vaccination</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_push">PushActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="send_location">Send Locations</string>
    <string name="send_visit">Send Visit</string>
    <string name="send_individual">Send Individual</string>
    <string name="send_residency">Send Residency</string>
    <string name="send_inmigration">Send Inmigration</string>
    <string name="send_outmigration">Send Outmigration</string>
    <string name="send_membership">Send Membership</string>
    <string name="send_socialgroup">Send Socialgroup</string>
    <string name="send_pregnancy">Send Pregnancy Observation</string>
    <string name="send_outcome">Send Outcome</string>
    <string name="send_pregoutcome">Send Pregnancy Outcome</string>
    <string name="send_relationship">Send Relationship</string>
    <string name="send_death">Send Death</string>
    <string name="get_hierarchy">Get Hierarchy</string>
    <string name="get_location">Get Locations</string>
    <string name="get_round">Get Round</string>
    <string name="get_individual">Get Individual</string>
    <string name="get_residency">Get Residency</string>
    <string name="get_membership">Get Membership</string>
    <string name="get_socialgroup">Get Socialgroup</string>
    <string name="get_pregobservation">Get Pregnancy Observation</string>
    <string name="ind_Details" translatable="false">Individual</string>
    <string name="ind_q1">BACKGROUND</string>
    <string name="ind_q1p1">START TIME</string>
    <string name="fw">FIELD WORKERS CODE</string>
    <string name="visitDate">DATE OF INTERVIEW</string>
    <string name="modifDate">LAST UPDATE DATE(YYYY-MM-DD)</string>
    <string name="ind_q2">INDIVIDUAL CHARACTERISTICS</string>
    <string name="ind_extid">Individual ID</string>
    <string name="ind_name">Name of Individual</string>
    <string name="ind_nick">Nick or Other Name of Individual</string>
    <string name="dob">Is it an estimated Date of birth?</string>
    <string name="actual_dob">Date of Birth</string>
    <string name="ind_q4p5">Age</string>
    <string name="gender">Gender of Individual</string>
    <string name="tribe">Ethnicity of Individual</string>
    <string name="tribe_other">Other ethnicity specified</string>
    <string name="save">SAVE RECORD</string>
    <string name="individualOLD">Individual</string>
    <string name="occupations">Occupation</string>
    <string name="religion">Select Religion</string>
    <string name="resident">Resident</string>
    <string name="crtlocation">Create Locations</string>
    <string name="father_extid">Select Biological Father</string>
    <string name="mother_extid">Select Biological Mother</string>
    <string name="phone">Phone Number of Individual</string>
    <string name="membership" translatable="false">Membership</string>
    <string name="household_select">Select Household</string>
    <string name="rltn_head">Relationship to GroupHead</string>
    <string name="starttype">Select Start Type</string>
    <string name="startdate">Select Start Date</string>
    <string name="imgdate"><b>Select Date of Inmigration</b></string>
    <string name="endtype">Select End Type</string>
    <string name="enddate">Select End Date</string>
    <string name="hierarchy">Locations Selection</string>
    <string name="region">Region</string>
    <string name="district">District</string>
    <string name="subdistrict">Sub-District</string>
    <string name="village">Village</string>
    <string name="cluster">Sub Village</string>
    <string name="phone2">Extra Phone Number</string>
    <string name="residency">Residency</string>
    <string name="location_select">Select Locations</string>
    <string name="visitid">Visit ID</string>
    <string name="visit_outcome">Visit Outcome</string>
    <string name="socialgroupname">Enter Name of Household Head</string>
    <string name="socialgroupid">Household ID</string>
    <string name="socialgroup">Household</string>
    <string name="compoundnumber">Enter compound Number written on Structure</string>
    <string name="compoundName">Enter the Name of Compound</string>
    <string name="location_status">Compound Status</string>
    <string name="deathform">Death</string>
    <string name="dod">Date of Death</string>
    <string name="causeofdeath">Cause of Death</string>
    <string name="deathplace">Place of Death</string>
    <string name="respondent_name">Name of Respondent</string>
    <string name="respondent_phone">Phone Number of Respondent</string>
    <string name="get_codebook">GET CODEBOOK</string>
    <string name="get_relationship">GET RELATIONSHIP</string>
    <string name="form_complete">Is the Form complete &amp; Ready for submission?</string>
    <string name="text_send_to_server">SYNC DATA</string>
    <string name="send_event">Send Events</string>
    <string name="closedata">Close Form</string>
    <string name="get_demography">Get Demography</string>
    <string name="savedata">Save Changes</string>
    <string name="savecondata">Save &amp; Continue</string>
    <string name="general_info"><b> SECTION B General Information</b></string>
    <string name="MARITAL_SCORRES_SOCIO">B1 What is your marital status?</string>
    <string name="MARITAL_AGE_SOCIO">B1a If married, age at time of marriage?</string>
    <string name="RELIGION_SCORRES_SOCIO">B2 What is your religion?</string>
    <string name="RELIGION_SPFY_SCORRES_SOCIO">B2a Specify Other religion</string>
    <string name="CETHNIC_SOCIO">B3 What is your ethnicity?</string>
    <string name="OTHR_TRB_SPFY_CETHNIC_SOCIO">B3b Other Ethnicity/Tribe</string>
    <string name="size_hh"><b>SECTION C Size of Household</b></string>
    <string name="HEAD_HH_FCORRES_SOCIO">C1 Who is the head of your household\?</string>
    <string name="HEAD_HH_SPFY_FCORRES_SOCIO">C1a Other Specify</string>
    <string name="HOUSE_OCC_TOT_FCORRES_SOCIO">C2 What is the total number of people living in your household\? This is defined as the number of people who typically sleep under the same roof as you, including yourself.</string>
    <string name="HOUSE_OCC_LT5_FCORRES_SOCIO">C2a Of the total number of people living in your household, how many are children under the age 5\? That is, how many children less than 5 years of age typically sleep under the same roof as you\?</string>
    <string name="HOUSE_OCC_GE5_FCORRES_SOCIO">C2b Of the total number of people living in your household (including yourself), how many are 5 years of age or older\? That is, how many people 5 years of age or older typically sleep under the same roof as you\?</string>
    <string name="text_CONYN_COVAL">Optional additional comments:</string>
    <string name="text_CONYN_COVAL_YN">Are there any comments to add\?:</string>
    <string name="get_ses">GET SES [PROFILE]</string>
    <string name="get_vac">Get Vaccination</string>
    <string name="complete">Complete</string>
</resources>