<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MidnightBlue"
    tools:context=".Activity.PullActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
                android:id="@+id/button_SyncHierarchyData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_codebook"
                app:icon="@drawable/pull"/>

        <TextView
            android:id="@+id/textView_SyncHierarchyData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp" />

            <Button
                android:id="@+id/button_SyncLocationData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_location"
                app:icon="@drawable/pull"/>

        <TextView
            android:id="@+id/textView_SyncLocationData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

            <Button
                android:id="@+id/button_SyncIndividualData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_individual"
                app:icon="@drawable/pull"/>


        <TextView
            android:id="@+id/textView_SyncIndividualData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <Button
                android:id="@+id/button_SyncResidency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_residency"
                app:icon="@drawable/pull"/>

        <TextView
            android:id="@+id/textView_SyncResidency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_SyncRelationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_relationship"
            app:icon="@drawable/pull"/>

        <TextView
            android:id="@+id/textView_SyncRelationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_SyncSocialgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_socialgroup"
            app:icon="@drawable/pull"/>

        <TextView
            android:id="@+id/textView_SyncSocialgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_SyncPregnancy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_pregobservation"
            app:icon="@drawable/pull"/>

        <TextView
            android:id="@+id/textView_SyncPregnancy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_SyncDemography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_demography"
            app:icon="@drawable/pull"/>

        <TextView
            android:id="@+id/textView_SyncDemography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_SyncSes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_ses"
            app:icon="@drawable/pull"/>

        <TextView
            android:id="@+id/textView_SyncSes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_SyncVac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_vac"
            app:icon="@drawable/pull"/>

        <TextView
            android:id="@+id/textView_SyncVac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_Complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete"/>

        <TextView
            android:id="@+id/textView_Complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />




    </LinearLayout>

</ScrollView>